[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/interactuables/PhoneInteractuable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/FirstScene.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/news.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/click-snap-perc.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/telephone-ring-04.wav.sample" type="AudioStream" id=6]
[ext_resource path="res://assets/textures/living_1200x740.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/black_square.png" type="Texture" id=10]
[ext_resource path="res://scenes/interactuables/TVInteractuable.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/InteractuableHandler.gd" type="Script" id=12]

[node name="FirstScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0639992
margin_bottom = -0.200001
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
phone = ExtResource( 6 )
pressnext = ExtResource( 5 )
news = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" parent="." instance=ExtResource( 2 )]
anchor_left = 0.004
margin_left = -0.0173647
margin_top = 7.2153
margin_right = -0.0175781
margin_bottom = 0.0151978
scene_name = "1"
level_path = NodePath("..")

[node name="Interact" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TVInteractuable" parent="Interact" instance=ExtResource( 11 )]
margin_left = 812.806
margin_top = 65.9989
margin_right = 812.806
margin_bottom = 65.9989

[node name="PhoneInteractuable" parent="Interact" instance=ExtResource( 1 )]
margin_left = 100.051
margin_top = 243.52
margin_right = -923.949
margin_bottom = -356.28

[node name="DialogSfx" type="AudioStreamPlayer2D" parent="."]

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "background"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Background2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionSound" type="AudioStreamPlayer" parent="Background2"]
stream = ExtResource( 6 )

[node name="InteractuableHandler" type="Node" parent="."]
script = ExtResource( 12 )

[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
[connection signal="finished" from="Background2/TransitionSound" to="." method="_on_TransitionSound_finished"]
